third_party/move/move-compiler/tests/move_check/inlining/lambda_return.exp
error[E14003]: feature not supported in inlined functions
  ┌─ tests/move_check/inlining/lambda_return.move:3:2
  │
3 │     return f(b)
  │     ^^^^^^^^^^^ return statements currently not supported

